classDiagram
  subgraph Core
    class Component {
      -component_classes
      +register()
      +get_class()
      +from_hash()
      +initialize()
      +type()
      +to_hash()
    }
    class Entity {
      -id
      -components
      -component_map
      -tags
      -name
      +initialize()
      +add_component()
      +remove_component()
      +has_component?()
      +get_component()
      +add_tag()
      +remove_tag()
      +has_tag?()
      +tags()
      +to_hash()
      +method_missing()
      +respond_to_missing?()
    }
    class System {
      -world
      +initialize()
      +update()
      +handle_event()
      +entities_with()
      +emit_event()
      +queue_command()
    }
    class World {
      -entities
      -systems
      -quit
      -display
      -logger
      -current_level
      -level_changed
      -event_subscribers
      -event_queue
      -command_queue
      +initialize()
      +update()
      +quit?()
      +level_changed?()
      +add_entity()
      +remove_entity()
      +get_entity()
      +get_entity_by_name()
      +find_entity_by_tag()
      +query_entities()
      +add_system()
      +queue_command()
      +emit_event()
      +subscribe()
      +unsubscribe()
      +set_level()
      +grid()
      +process_commands()
      +process_events()
      +handle_command()
      +add_to_inventory()
    }
  end
  subgraph Components
    class Component {
      -component_classes
      +register()
      +get_class()
      +from_hash()
      +initialize()
      +type()
      +to_hash()
    }
    style Component fill:#ffcccc
  end
  subgraph Systems
    class System {
      -world
      +initialize()
      +update()
      +handle_event()
      +entities_with()
      +emit_event()
      +queue_command()
    }
  end
  %% Relationships
  Entity --> Component : uses
  Entity o--> "many" Component : contains
  World o--> "many" Entity : manages
  World o--> "many" System : manages
